FlightPath 6.x Changelog
========================

2022-04-16
  Added code to lengthen timeout during cron runs.
  
  Added code to content module to delete content (and files) marked with delete_flag = 1.  Same for advise module, admin, and comments modules.
  
  Fixed bug to where if you try to view content which doesn't exist, we go to a 404 error.

  Removed getting variables in settings.php file.  Instead, they will be "lazy-loaded" as-needed.  Altered stats module to make sure to use variable_get() syntax
  instead of trying to load directly from globals array.
  

2022-04-15
  Added extra permission to prereqs module, so that you can only override locks on courses if you have permission.
  
  Adjusted the "locked but checked" icon for courses in prereqs, to make the check a little more obvious.

  Removing alerts (from the confirm remove dialog screen) shows spinner icon when clicking button.
  
  Upgraded included PHPMailer library from 6.0 to 6.6 to take advantage of newer code with security enhancements.
  
  Fixed bug where files being emailed were not being decrypted BEFORE being sent as email, making them unreadible to the recipient.
  

2022-04-12
  Added extra classes to engagements for text messages, to say which phone number the message was being sent from and to.  This should help with styling if you want
  to have different colors or other styles based on what phone line it was sent to or from.


2022-04-11
  Removed concept of trying to "preload" a set number of courses on login.  This is now handled in a more elegant way.
  
  Added link to schools help page to schools module settings page.
  
  Added "Loading" dialog when you search and receive a single student. 
  
  Changed "Advisee Alerts" tab to say just "Alerts".
  
  Placed all db connection code in settings.php, and put the pdo into GLOBALS, so we only make 1 database connection per page load.
  
  
2022-04-10