@@ -2224,8 +2224,8 @@ function system_settings_form() {
     "type" => "radios",
     "label" => t("Theme:"),
     "options" => system_get_available_themes(),
-    "value" => variable_get("theme", "themes/classic"),
-    "description" => t("Select the theme you wish to use.  Ex:  Classic (themes/classic)"),
+    "value" => variable_get("theme", "themes/fp6_clean"),
+    "description" => t("Select the theme you wish to use.  Ex:  Classic (themes/fp6_clean)"),
   );
     
 
