@@ -1,6 +1,11 @@
 FlightPath 6.x Changelog
 ========================
 
+2022-04-17
+  Made it so that the theme always defaults to fp6_clean (included with core), and it is not set in the settings file.  Got rid of the
+  "display_mysql_errors" line in settings.php, since it is not used any longer anyway.
+  
+
 2022-04-16
   Added code to lengthen timeout during cron runs.
   
